plugins {
  id 'org.smartbit4all.platform.gradle.java' version '0.5.3'
  id 'org.springframework.boot' version '3.3.3'
}

group = 'hu.aestallon.storageexplorer'
version = '0.2.0'

java {
  toolchain {
    languageVersion.set(JavaLanguageVersion.of(21))
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.smartbit4all.platform:api'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  
  implementation 'org.smartbit4all.platform:sql'
  implementation 'org.springframework.boot:spring-boot-starter-jdbc'

  runtimeOnly 'com.oracle.database.jdbc:ojdbc8:12.2.0.1'
  runtimeOnly 'org.postgresql:postgresql:42.7.4'

  implementation 'org.graphstream:gs-core:2.0'
  implementation 'org.graphstream:gs-ui-swing:2.0'

  implementation 'com.formdev:flatlaf:3.3'

  implementation 'com.fifesoft:rsyntaxtextarea:3.4.0'
  implementation 'com.fifesoft:rstaui:3.3.1'

  implementation 'com.intellij:forms_rt:7.0.3'
}

test {
  useJUnitPlatform()
}

tasks.named('bootJar') {
  manifest {
    attributes(
      'Implementation-Title': project.name,
      'Implementation-Version': project.version)
  }
}
